🐛 FIX: Featured Stories image wrapping

--- a/_/sass/_news.scss
+++ b/_/sass/_news.scss
@@ -48,6 +48,8 @@
 
 	img {
 		margin: 20px 0 10px;
+		display: block;
+		clear: both;
 	}
 }
 
